[gd_scene load_steps=10 format=2]

[ext_resource path="res://broker/TradeConfirmation.gd" type="Script" id=1]
[ext_resource path="res://school/Lessons/LessonFont.otf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.235294, 0.235294, 0.235294, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 27
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.803922, 0.803922, 0.803922, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 27
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.427451, 0.117647, 0.117647, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.294118, 0.0823529, 0.0823529, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.117647, 0.427451, 0.129412, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0823529, 0.294118, 0.0901961, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TradeConfirmation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 63.0
margin_right = -63.0
margin_bottom = -624.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 450.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 10.0
margin_right = 450.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Defina o número de títulos
a ser comprados."
align = 1
valign = 1

[node name="Ammount" type="Control" parent="."]
margin_left = 25.0
margin_top = 140.0
margin_right = 65.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="Ammount"]
margin_top = -30.0
margin_right = 400.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUANTIDADE"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AmmountPanel" type="Panel" parent="Ammount"]
margin_right = 400.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AmmountLabel" type="Label" parent="Ammount"]
margin_right = 400.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Minus" type="Button" parent="Ammount"]
margin_top = 45.0
margin_right = 80.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "-"

[node name="Plus" type="Button" parent="Ammount"]
margin_left = 90.0
margin_top = 45.0
margin_right = 170.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "+"

[node name="Multiplier" type="Button" parent="Ammount"]
margin_left = 190.0
margin_top = 45.0
margin_right = 400.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "x1"

[node name="Price" type="Control" parent="."]
margin_left = 25.0
margin_top = 280.0
margin_right = 65.0
margin_bottom = 320.0

[node name="Label" type="Label" parent="Price"]
margin_top = -30.0
margin_right = 400.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CUSTO TOTAL"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AmmountPanel" type="Panel" parent="Price"]
margin_right = 400.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AmmountLabel" type="Label" parent="Price"]
margin_right = 400.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "G$ 0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Cancel" type="Button" parent="."]
margin_left = 25.0
margin_top = 335.0
margin_right = 220.0
margin_bottom = 375.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "CANCELAR"

[node name="Confirm" type="Button" parent="."]
margin_left = 230.0
margin_top = 335.0
margin_right = 425.0
margin_bottom = 375.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "CONFIRMAR"

[connection signal="pressed" from="Ammount/Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="Ammount/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Ammount/Multiplier" to="." method="_on_Multiplier_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
